--- a/preprocess-mimic-iii.ipynb
+++ b/preprocess-mimic-iii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "import re\n",
-    "import pickle"
+    "import pickle\n",
+    "import datetime"
    ]
   },
   {
@@ -729,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,11 +750,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "subject_ids, feature_matrix = pickle.load(open(\"../processed/intermediate_features.pkl\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_admissions[\"DISCHTIME\"] = pd.to_datetime(df_admissions[\"DISCHTIME\"])\n",
+    "df_admissions[\"ADMITTIME\"] = pd.to_datetime(df_admissions[\"ADMITTIME\"])\n",
+    "\n",
+    "subject_ids_after_discarding = set()\n",
+    "threshold_timedelta = datetime.timedelta(hours=48)\n",
+    "for index, row in df_admissions.iterrows():\n",
+    "    if row[\"DISCHTIME\"] - row[\"ADMITTIME\"] >= threshold_timedelta:\n",
+    "        subject_ids_after_discarding.add(row[\"SUBJECT_ID\"])"
    ]
   },
   {
@@ -769,7 +786,14 @@
     "    \"IS_RACE_OTHER\": list(),\n",
     "    \"IS_SEX_M\": list(), \"IS_SEX_F\": list()\n",
     "    }\n",
-    "for s_id in subject_ids:\n",
+    "tfidf_matrix = list()\n",
+    "threshold_timedelta = datetime.timedelta(hours=48)\n",
+    "\n",
+    "for index, s_id in enumerate(subject_ids):\n",
+    "    if ((df_admissions[df_admissions[\"SUBJECT_ID\"] == s_id][\"DISCHTIME\"] - df_admissions[df_admissions[\"SUBJECT_ID\"] == s_id][\"ADMITTIME\"]) \n",
+    "        <= threshold_timedelta).all():\n",
+    "        continue\n",
+    "    tfidf_matrix.append(feature_matrix[index, :])\n",
     "    labels[\"SUBJECT_ID\"].append(s_id)\n",
     "    labels[\"IS_DEAD\"].append(patient_deaths[s_id])\n",
     "    if \"BLACK\" in patient_race[s_id]:\n",
@@ -813,41 +837,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "               SUBJECT_ID  IS_DEAD  IS_RACE_BLACK  IS_RACE_WHITE  \\\n",
-       "IS_RACE_OTHER                                                      \n",
-       "0                   39111    39111          39111          39111   \n",
-       "1                    6936     6936           6936           6936   \n",
-       "\n",
-       "               IS_RACE_HISPANIC  IS_RACE_ASIAN  IS_SEX_M  IS_SEX_F  \n",
-       "IS_RACE_OTHER                                                       \n",
-       "0                         39111          39111     39111     39111  \n",
-       "1                          6936           6936      6936      6936  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SUBJECT_ID</th>\n      <th>IS_DEAD</th>\n      <th>IS_RACE_BLACK</th>\n      <th>IS_RACE_WHITE</th>\n      <th>IS_RACE_HISPANIC</th>\n      <th>IS_RACE_ASIAN</th>\n      <th>IS_SEX_M</th>\n      <th>IS_SEX_F</th>\n    </tr>\n    <tr>\n      <th>IS_RACE_OTHER</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>39111</td>\n      <td>39111</td>\n      <td>39111</td>\n      <td>39111</td>\n      <td>39111</td>\n      <td>39111</td>\n      <td>39111</td>\n      <td>39111</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>6936</td>\n      <td>6936</td>\n      <td>6936</td>\n      <td>6936</td>\n      <td>6936</td>\n      <td>6936</td>\n      <td>6936</td>\n      <td>6936</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 55
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_labels = pd.DataFrame(labels)\n",
-    "df_labels.groupby(\"IS_RACE_OTHER\").count()"
+    "from scipy.sparse import vstack\n",
+    "tfidf_sparse_matrix = vstack(np.array(tfidf_matrix))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = pd.DataFrame.sparse.from_spmatrix(feature_matrix)\n",
+    "features = pd.DataFrame.sparse.from_spmatrix(tfidf_sparse_matrix)\n",
     "features[\"IS_SEX_M\"] = df_labels[\"IS_SEX_M\"]\n",
     "features[\"SUBJECT_ID\"] = df_labels[\"SUBJECT_ID\"]\n",
     "features[\"IS_DEAD\"] = df_labels[\"IS_DEAD\"] \n",
@@ -862,42 +867,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "     0    1    2    3         4    5         6         7    8         9  ...  \\\n",
-       "0  0.0  0.0  0.0  0.0  0.000000  0.0  0.029539  0.063559  0.0  0.000000  ...   \n",
-       "1  0.0  0.0  0.0  0.0  0.000000  0.0  0.000000  0.000000  0.0  0.000000  ...   \n",
-       "2  0.0  0.0  0.0  0.0  0.000000  0.0  0.014750  0.051573  0.0  0.082432  ...   \n",
-       "3  0.0  0.0  0.0  0.0  0.001105  0.0  0.028045  0.039889  0.0  0.073757  ...   \n",
-       "4  0.0  0.0  0.0  0.0  0.000000  0.0  0.041356  0.032784  0.0  0.088728  ...   \n",
-       "\n",
-       "       9999  IS_SEX_M  SUBJECT_ID  IS_DEAD  IS_RACE_BLACK  IS_RACE_WHITE  \\\n",
-       "0  0.027524         1       31038        1              0              1   \n",
-       "1  0.000000         1       70150        0              1              0   \n",
-       "2  0.000000         1       54190        0              0              1   \n",
-       "3  0.000000         1        5771        1              0              1   \n",
-       "4  0.000000         0       80030        0              0              1   \n",
-       "\n",
-       "   IS_RACE_HISPANIC  IS_RACE_ASIAN  IS_RACE_OTHER  IS_SEX_F  \n",
-       "0                 0              0              0         0  \n",
-       "1                 0              0              0         0  \n",
-       "2                 0              0              0         0  \n",
-       "3                 0              0              0         0  \n",
-       "4                 0              0              0         1  \n",
-       "\n",
-       "[5 rows x 10009 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>8</th>\n      <th>9</th>\n      <th>...</th>\n      <th>9999</th>\n      <th>IS_SEX_M</th>\n      <th>SUBJECT_ID</th>\n      <th>IS_DEAD</th>\n      <th>IS_RACE_BLACK</th>\n      <th>IS_RACE_WHITE</th>\n      <th>IS_RACE_HISPANIC</th>\n      <th>IS_RACE_ASIAN</th>\n      <th>IS_RACE_OTHER</th>\n      <th>IS_SEX_F</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.029539</td>\n      <td>0.063559</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>...</td>\n      <td>0.027524</td>\n      <td>1</td>\n      <td>31038</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>...</td>\n      <td>0.000000</td>\n      <td>1</td>\n      <td>70150</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.014750</td>\n      <td>0.051573</td>\n      <td>0.0</td>\n      <td>0.082432</td>\n      <td>...</td>\n      <td>0.000000</td>\n      <td>1</td>\n      <td>54190</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.001105</td>\n      <td>0.0</td>\n      <td>0.028045</td>\n      <td>0.039889</td>\n      <td>0.0</td>\n      <td>0.073757</td>\n      <td>...</td>\n      <td>0.000000</td>\n      <td>1</td>\n      <td>5771</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.041356</td>\n      <td>0.032784</td>\n      <td>0.0</td>\n      <td>0.088728</td>\n      <td>...</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>80030</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 10009 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 64
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "pickle.dump(features, open(\"../processed/pre_split.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    features.drop(columns=[\"SUBJECT_ID\", \"IS_DEAD\"]), features[\"IS_DEAD\"],\n",
@@ -915,15 +896,8 @@
     "    {\n",
     "        \"train_test_split\": [X_train, X_test, y_train, y_test],\n",
     "        \"dataset\": features\n",
-    "    }, open(\"../processed/mimic_tfidf.pkl\", \"wb\"))"
+    "    }, open(\"../processed/mimic_data_tfidf.pkl\", \"wb\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
